Bug 1432009 Fix MinGW build failure with d_write3.h r=jfkthame

Bump mingw version to get the newest commit and do not include the
un-needed dw-extras.h on MinGW (thanks Jacek!)

MozReview-Commit-ID: OjO93XHCxs